# image-puzzle

./: package.json  pnpm-lock.yaml
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/puzzle-builder/: Cargo.toml
src-tauri/puzzle-builder/examples/: game_save_new.rs  slipt_image.rs
src-tauri/puzzle-builder/src/: error.rs  game.rs  image_splitter.rs  lib.rs  plugin.rs  utils.rs
src-tauri/puzzle-builder/src/game/: dim.rs  frame.rs  party.rs  save.rs
src-tauri/puzzle-builder/src/plugin/: commands.rs  state.rs
src-tauri/puzzle-builder/src/plugin/commands/: get_current.rs  get_image.rs  get_moves.rs  have_won.rs  init.rs  invert.rs  load.rs  reset.rs  save_party.rs  swap.rs  transpose.rs
src-tauri/puzzle-builder/src/plugin/commands/invert/: cols.rs  rows.rs
src-tauri/puzzle-builder/src/plugin/commands/swap/: columns.rs  rows.rs
src-tauri/src/: main.rs
src/lib/componnents/: Game.svelte  ImageFrame.svelte
src/lib/plugin/: index.ts  invoke.ts
src/lib/plugin/commands/: get_current.ts  get_image.ts  get_moves.ts  have_won.ts  init.ts  invert.ts  load.ts  reset.ts  save_party.ts  swap.ts  transpose.ts
src/lib/stores/: current_party.ts
src/routes/: +page.svelte
src/routes/game/: +page.svelte
