[package]
name = "puzzle-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
toml = "0.8.9"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
image = "0.24.8"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4" }
thiserror = "1"

[dev-dependencies]
anyhow = "1"